// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorPicker > should render correctly full color icon picker 1`] = `
<div>
  <div
    style="width: 134px;"
  >
    <div
      class="HvColorPicker-root hv-0 HvFormElement-root"
    >
      <div
        class="HvColorPicker-labelContainer hv-1yp4ln"
      >
        <label
          class="HvTypography-root HvTypography-label HvColorPicker-label HvLabel-root css-2x9lkd-StyledTypography e17iqvr40 hv-1gpthta"
          id="hvdropdown26-label"
        >
          Color
        </label>
      </div>
      <div
        class="HvBaseDropdown-root HvColorPicker-dropdownRootIconOnly hv-x3wokz css-1nukton-StyledRoot eapzthe8"
      >
        <div
          aria-expanded="false"
          aria-labelledby="hvdropdown26-label"
          class="HvBaseDropdown-anchor css-c41kvr-StyledAnchor eapzthe7"
          role="combobox"
          tabindex="-1"
        >
          <div
            aria-labelledby="hvdropdown26-label"
            class="HvBaseDropdown-header css-4bvoko-StyledHeaderRoot eapzthe6"
            role="textbox"
            tabindex="0"
          >
            <div
              class="HvBaseDropdown-selection hv-y8aj3r css-14ov9q3-StyledSelection eapzthe5"
            />
            <div
              class="css-zsju0o-StyledAdornment eapzthe3"
            >
              <div
                class="HvColorPicker-colorPickerIcon hv-0 css-f95wjz"
                name="ColorPicker"
              >
                <svg
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="color0"
                    d="M15.415.567a2.047 2.047 0 0 0-2.828 0l-2.121 2.121L9.05 1.274l-.707.707L14 7.638l.707-.707-1.414-1.415 2.121-2.121a2 2 0 0 0 .001-2.828zM12.587 4.81zm2.121-2.122-2.121 2.121-1.414-1.414 2.121-2.121a1 1 0 0 1 1.414 1.414zM0 13v3h3l9-9-3-3zm2.586 2H1v-1.585l8-8L10.586 7z"
                    fill="var(--uikit-colors-secondary)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > should render correctly full color picker 1`] = `
<div>
  <div
    style="width: 134px;"
  >
    <div
      class="HvColorPicker-root hv-0 HvFormElement-root"
    >
      <div
        class="HvColorPicker-labelContainer hv-1yp4ln"
      >
        <label
          class="HvTypography-root HvTypography-label HvColorPicker-label HvLabel-root css-2x9lkd-StyledTypography e17iqvr40 hv-1gpthta"
          id="hvdropdown1-label"
        >
          Color
        </label>
      </div>
      <div
        class="HvBaseDropdown-root css-1nukton-StyledRoot eapzthe8"
      >
        <div
          aria-expanded="true"
          aria-labelledby="hvdropdown1-label"
          aria-owns="hvbasedropdown3-children-container"
          class="HvBaseDropdown-anchor css-c41kvr-StyledAnchor eapzthe7"
          role="combobox"
          tabindex="-1"
        >
          <div
            aria-controls="hvbasedropdown3-children-container"
            aria-labelledby="hvdropdown1-label"
            class="HvBaseDropdown-header HvBaseDropdown-headerOpen HvBaseDropdown-headerOpenDown css-ntsilr-StyledHeaderRoot eapzthe6"
            role="textbox"
            tabindex="0"
          >
            <div
              class="HvBaseDropdown-selection css-14ov9q3-StyledSelection eapzthe5"
            >
              <p
                class="HvTypography-root HvTypography-body HvBaseDropdown-placeholder css-1a5i6hw-StyledPlaceholder eapzthe4 hv-1gxwolr"
              >
                Select color...
              </p>
            </div>
            <div
              class="css-zsju0o-StyledAdornment eapzthe3"
            >
              <div
                class="HvColorPicker-colorPickerIcon hv-0 css-f95wjz"
                name="ColorPicker"
              >
                <svg
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="color0"
                    d="M15.415.567a2.047 2.047 0 0 0-2.828 0l-2.121 2.121L9.05 1.274l-.707.707L14 7.638l.707-.707-1.414-1.415 2.121-2.121a2 2 0 0 0 .001-2.828zM12.587 4.81zm2.121-2.122-2.121 2.121-1.414-1.414 2.121-2.121a1 1 0 0 1 1.414 1.414zM0 13v3h3l9-9-3-3zm2.586 2H1v-1.585l8-8L10.586 7z"
                    fill="var(--uikit-colors-secondary)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > should render correctly recommended colors only color picker 1`] = `
<div>
  <div
    style="width: 134px;"
  >
    <div
      class="HvColorPicker-root hv-0 HvFormElement-root"
    >
      <div
        class="HvColorPicker-labelContainer hv-1yp4ln"
      >
        <label
          class="HvTypography-root HvTypography-label HvColorPicker-label HvLabel-root css-2x9lkd-StyledTypography e17iqvr40 hv-1gpthta"
          id="hvdropdown23-label"
        >
          Color
        </label>
      </div>
      <div
        class="HvBaseDropdown-root css-1nukton-StyledRoot eapzthe8"
      >
        <div
          aria-expanded="true"
          aria-labelledby="hvdropdown23-label"
          aria-owns="hvbasedropdown25-children-container"
          class="HvBaseDropdown-anchor css-c41kvr-StyledAnchor eapzthe7"
          role="combobox"
          tabindex="-1"
        >
          <div
            aria-controls="hvbasedropdown25-children-container"
            aria-labelledby="hvdropdown23-label"
            class="HvBaseDropdown-header HvBaseDropdown-headerOpen HvBaseDropdown-headerOpenDown css-ntsilr-StyledHeaderRoot eapzthe6"
            role="textbox"
            tabindex="0"
          >
            <div
              class="HvBaseDropdown-selection css-14ov9q3-StyledSelection eapzthe5"
            >
              <div
                class="HvColorPicker-headerColorIcon hv-1rc8yrj css-f95wjz"
                name="Checkbox"
              >
                <svg
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="color0"
                    d="M0 0h16v16H0z"
                    fill="#de2beb"
                  />
                  <path
                    class="color1"
                    d="M16 16H0V0h16zM1 15h14V1H1z"
                    fill="transparent"
                  />
                </svg>
              </div>
              <p
                class="HvTypography-root HvTypography-body HvColorPicker-headerColorValue hv-1piv3d7"
              >
                #de2beb
              </p>
            </div>
            <div
              class="css-zsju0o-StyledAdornment eapzthe3"
            >
              <div
                class="HvColorPicker-colorPickerIcon hv-0 css-f95wjz"
                name="ColorPicker"
              >
                <svg
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="color0"
                    d="M15.415.567a2.047 2.047 0 0 0-2.828 0l-2.121 2.121L9.05 1.274l-.707.707L14 7.638l.707-.707-1.414-1.415 2.121-2.121a2 2 0 0 0 .001-2.828zM12.587 4.81zm2.121-2.122-2.121 2.121-1.414-1.414 2.121-2.121a1 1 0 0 1 1.414 1.414zM0 13v3h3l9-9-3-3zm2.586 2H1v-1.585l8-8L10.586 7z"
                    fill="var(--uikit-colors-secondary)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > should render correctly recommended colors only icon color picker 1`] = `
<div>
  <div
    style="width: 134px;"
  >
    <div
      class="HvColorPicker-root hv-0 HvFormElement-root"
    >
      <div
        class="HvColorPicker-labelContainer hv-1yp4ln"
      >
        <label
          class="HvTypography-root HvTypography-label HvColorPicker-label HvLabel-root css-2x9lkd-StyledTypography e17iqvr40 hv-1gpthta"
          id="hvdropdown32-label"
        >
          Color
        </label>
      </div>
      <div
        class="HvBaseDropdown-root HvColorPicker-dropdownRootIconOnly hv-x3wokz css-1nukton-StyledRoot eapzthe8"
      >
        <div
          aria-expanded="false"
          aria-labelledby="hvdropdown32-label"
          class="HvBaseDropdown-anchor css-c41kvr-StyledAnchor eapzthe7"
          role="combobox"
          tabindex="-1"
        >
          <div
            aria-labelledby="hvdropdown32-label"
            class="HvBaseDropdown-header css-4bvoko-StyledHeaderRoot eapzthe6"
            role="textbox"
            tabindex="0"
          >
            <div
              class="HvBaseDropdown-selection hv-y8aj3r css-14ov9q3-StyledSelection eapzthe5"
            />
            <div
              class="css-zsju0o-StyledAdornment eapzthe3"
            >
              <div
                class="HvColorPicker-headerColorIconOnly hv-0 css-f95wjz"
                name="Checkbox"
              >
                <svg
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="color0"
                    d="M0 0h16v16H0z"
                    fill="#de2beb"
                  />
                  <path
                    class="color1"
                    d="M16 16H0V0h16zM1 15h14V1H1z"
                    fill="transparent"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > should render correctly without saved colors color picker 1`] = `
<div>
  <div
    style="width: 134px;"
  >
    <div
      class="HvColorPicker-root hv-0 HvFormElement-root"
    >
      <div
        class="HvColorPicker-labelContainer hv-1yp4ln"
      >
        <label
          class="HvTypography-root HvTypography-label HvColorPicker-label HvLabel-root css-2x9lkd-StyledTypography e17iqvr40 hv-1gpthta"
          id="hvdropdown12-label"
        >
          Color
        </label>
      </div>
      <div
        class="HvBaseDropdown-root css-1nukton-StyledRoot eapzthe8"
      >
        <div
          aria-expanded="true"
          aria-labelledby="hvdropdown12-label"
          aria-owns="hvbasedropdown14-children-container"
          class="HvBaseDropdown-anchor css-c41kvr-StyledAnchor eapzthe7"
          role="combobox"
          tabindex="-1"
        >
          <div
            aria-controls="hvbasedropdown14-children-container"
            aria-labelledby="hvdropdown12-label"
            class="HvBaseDropdown-header HvBaseDropdown-headerOpen HvBaseDropdown-headerOpenDown css-ntsilr-StyledHeaderRoot eapzthe6"
            role="textbox"
            tabindex="0"
          >
            <div
              class="HvBaseDropdown-selection css-14ov9q3-StyledSelection eapzthe5"
            >
              <div
                class="HvColorPicker-headerColorIcon hv-1rc8yrj css-f95wjz"
                name="Checkbox"
              >
                <svg
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="color0"
                    d="M0 0h16v16H0z"
                    fill="#de2beb"
                  />
                  <path
                    class="color1"
                    d="M16 16H0V0h16zM1 15h14V1H1z"
                    fill="transparent"
                  />
                </svg>
              </div>
              <p
                class="HvTypography-root HvTypography-body HvColorPicker-headerColorValue hv-1piv3d7"
              >
                #de2beb
              </p>
            </div>
            <div
              class="css-zsju0o-StyledAdornment eapzthe3"
            >
              <div
                class="HvColorPicker-colorPickerIcon hv-0 css-f95wjz"
                name="ColorPicker"
              >
                <svg
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="color0"
                    d="M15.415.567a2.047 2.047 0 0 0-2.828 0l-2.121 2.121L9.05 1.274l-.707.707L14 7.638l.707-.707-1.414-1.415 2.121-2.121a2 2 0 0 0 .001-2.828zM12.587 4.81zm2.121-2.122-2.121 2.121-1.414-1.414 2.121-2.121a1 1 0 0 1 1.414 1.414zM0 13v3h3l9-9-3-3zm2.586 2H1v-1.585l8-8L10.586 7z"
                    fill="var(--uikit-colors-secondary)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker > should render correctly without saved colors icon color picker 1`] = `
<div>
  <div
    style="width: 134px;"
  >
    <div
      class="HvColorPicker-root hv-0 HvFormElement-root"
    >
      <div
        class="HvColorPicker-labelContainer hv-1yp4ln"
      >
        <label
          class="HvTypography-root HvTypography-label HvColorPicker-label HvLabel-root css-2x9lkd-StyledTypography e17iqvr40 hv-1gpthta"
          id="hvdropdown29-label"
        >
          Color
        </label>
      </div>
      <div
        class="HvBaseDropdown-root HvColorPicker-dropdownRootIconOnly hv-x3wokz css-1nukton-StyledRoot eapzthe8"
      >
        <div
          aria-expanded="false"
          aria-labelledby="hvdropdown29-label"
          class="HvBaseDropdown-anchor css-c41kvr-StyledAnchor eapzthe7"
          role="combobox"
          tabindex="-1"
        >
          <div
            aria-labelledby="hvdropdown29-label"
            class="HvBaseDropdown-header css-4bvoko-StyledHeaderRoot eapzthe6"
            role="textbox"
            tabindex="0"
          >
            <div
              class="HvBaseDropdown-selection hv-y8aj3r css-14ov9q3-StyledSelection eapzthe5"
            />
            <div
              class="css-zsju0o-StyledAdornment eapzthe3"
            >
              <div
                class="HvColorPicker-colorPickerIcon hv-0 css-f95wjz"
                name="ColorPicker"
              >
                <svg
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="color0"
                    d="M15.415.567a2.047 2.047 0 0 0-2.828 0l-2.121 2.121L9.05 1.274l-.707.707L14 7.638l.707-.707-1.414-1.415 2.121-2.121a2 2 0 0 0 .001-2.828zM12.587 4.81zm2.121-2.122-2.121 2.121-1.414-1.414 2.121-2.121a1 1 0 0 1 1.414 1.414zM0 13v3h3l9-9-3-3zm2.586 2H1v-1.585l8-8L10.586 7z"
                    fill="var(--uikit-colors-secondary)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
